--- a/28.html
+++ b/28.html
@@ -39,6 +39,12 @@
 <div> 
 <img class="komp"  src="https://droidone.ru/image/data/Blog/iphone11/Xi-8.jpg">
 </div>
+<div>a</div>
+<div>b</div>
+<div>c</div>
+<div></div>
+<div></div>
+<div></div>
 </body>
 
 </html>
