--- a/17.08.2022.html
+++ b/17.08.2022.html
@@ -9,12 +9,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 </head>
 <body>
-    
-<script> 
-
-
-</script>
-
+ 1   git init 
+2  git status 
+3  git config --global user.name "abdulaziz"
+4  git config --global user.email "saifullaivabdulaziz2005@gmail.com"
+5 git add .
+6  git commit -m "done"
+7 git remote add origin git@github.com:abdulazizdddwdw2w213/aaa.git 
+8 git push -u origin main
 
 
 </body>
